--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pusher": "^5.1.0-beta",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0",
+    "xlsx2json": "^1.0.0",
     "yamljs": "^0.3.0"
   }
 }
