--- a/api.yaml
+++ b/api.yaml
@@ -47,7 +47,7 @@ info:
       
     ---
 
-  version: "1.0.1"
+  version: "1.0.2"
   title: "Herald College Kathmandu App"
   contact:
     name: "Backend Team"
@@ -770,9 +770,7 @@ paths:
         "200":
           description: "OK"
           schema:
-            properties:
-              message:
-                type: "string"
+            $ref: "#/definitions/LostReport"
         "204":
           description: "NO_CONTENT"
           schema:
